# SISSF

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  run_SISSF copy.py  run_SISSF.py  run_SISSFTest.py  run_Semantic copy.py  run_Semantic.py  run_SemanticTest.py  run_Semantic_old2.py  run_analysis.py  text.py
ExtractProject/: .gitignore  LICENSE  README.md  convertInspired.py  extractDatasetSISSF.py  extractDatasetSISSFInspired.py  extractNGCFy.py  extractNGCFyInspired.py
ExtractProject/MovieTracker/: extractConvInspired.py  server.py
ExtractProject/MovieTracker/movie-tracker/src/: App.css  App.js  MovieForm.css  (+5 more)
SISSF.egg-info/: PKG-INFO
data/: SingleDataset.py  data_processing.py
model/: Social_Aggregators.py  Social_Encoders.py  UV_Aggregators.py  UV_Encoders.py  attention copy.py  attention.py  conv_trans.py  conv_trans_v1.py  conversation_history_encoder.py  conversational_task.py  conversational_task_cp_trns.py  entitiy_relationships_graph copy.py  entitiy_relationships_graph.py  info_nce_loss.py  rec_trans.py  recommendation_task copy.py  recommendation_task.py  recommendation_task_v1.py  recommendation_task_v2.py  recommendation_task_workingOn.py  semantic_fusion copy.py  semantic_fusion.py  semantic_fusion_old.py  semantic_fusion_v1.py  sing_rec_trans.py  social_information.py  transformer.py  user_interactions_graph copy.py  user_interactions_graph.py  user_interactions_social.py  user_social_graph copy 2.py  user_social_graph copy.py  user_social_graph.py
project.egg-info/: PKG-INFO
util/: disk.py  logFile.py  logconf.py  util.py
(+2 files in other folders)
