[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = "project"
version = "0.0.1"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project]
name = "SISSF"
version = "0.0.1"
authors = [
  { name="Mohammed Abdulaziz", email="ggffhh3344@gmail.com" },
]
description = "Social Information Sensitive Conversational Recommendation Using Multi-View Contrastive Learning"
readme = "README.md"
requires-python = ">=3.12.5"
